...
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="vo4-ry-JYm" secondAttribute="trailing" constant="16" id="dkp-U4-gtU"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="JZ6-UV-z8l" secondAttribute="trailing" constant="16" id="iFy-SS-AkN"/>
                            <constraint firstItem="vo4-ry-JYm" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="lsS-9d-nxK"/>
                            <constraint firstItem="JZ6-UV-z8l" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="pAS-JW-YfY"/>
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Coins" springLoaded="YES" id="sui-ru-8pN">
                        <imageReference key="image" image="bitcoinsign.circle" catalog="system" symbolScale="large"/>
                        <color key="badgeColor" name="accentColor"/>
                        <imageReference key="selectedImage" image="bitcoinsign.circle.fill" catalog="system" symbolScale="large" variableValue="1"/>
                    </tabBarItem>
                    <navigationItem key="navigationItem" id="ahc-7Y-1sz"/>
                    <connections>
...
                            <constraint firstItem="6Y3-GC-IHS" firstAttribute="leading" secondItem="kCZ-d4-0n5" secondAttribute="leading" constant="16" id="Vy5-jf-Tr2"/>
                            <constraint firstItem="kCZ-d4-0n5" firstAttribute="trailing" secondItem="6Y3-GC-IHS" secondAttribute="trailing" constant="16" id="gqW-hp-R3j"/>
                            <constraint firstItem="kCZ-d4-0n5" firstAttribute="trailing" secondItem="IMH-gp-y3D" secondAttribute="trailing" constant="16" id="z4r-ZQ-Mub"/>
                            <constraint firstItem="Pzn-SE-GEe" firstAttribute="bottom" secondItem="kCZ-d4-0n5" secondAttribute="bottom" id="zj3-L5-O1B"/>
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" tag="1" title="Favorites" image="star" catalog="system" selectedImage="star.fill" id="N25-Xl-vwC"/>
                    <connections>
                        <outlet property="searchView" destination="CHl-UY-82Q" id="7H5-YE-hLU"/>
                        <outlet property="tableView" destination="Pzn-SE-GEe" id="0fD-uh-12h"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="DXh-7L-GQe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
...
