...

// MARK: – UITableViewDelegate
extension FavListViewController: UITableViewDelegate {
    func tableView(_ tableView: UITableView, trailingSwipeActionsConfigurationForRowAt indexPath: IndexPath) -> UISwipeActionsConfiguration? {
        
        let fav = viewModel.favorites[indexPath.row]
        let delete = UIContextualAction( style: .destructive, title: "Remove"){ [weak self] _, _, done in
            self?.viewModel.remove(fav)
            done(true)
        }
        return UISwipeActionsConfiguration(actions: [delete])
    }
    
...
