//
//  CryptoBitUITests.swift
//  CryptoBitUITests
//
//  Created by Wycliff Kamau on 23/04/2025.
//

import XCTest

final class CryptoBitUITests: XCTestCase {
    
    let app = XCUIApplication()
    
    override func setUp() {
        continueAfterFailure = false
        app.launch()
    }
    
    func testFavoritesFlow() {

        app.tabBars.buttons["Coins"].tap()
        
        let firstCell = app.tables.cells.element(boundBy: 0)
        XCTAssertTrue(firstCell.waitForExistence(timeout: 5))
        
        firstCell.swipeLeft()
        let addToFav = firstCell.buttons["Add to Favorite"]
        XCTAssertTrue(addToFav.waitForExistence(timeout: 1))
        addToFav.tap()
        
        app.tabBars.buttons["Favorites"].tap()
        let favCell = app.tables.cells.element(boundBy: 0)
        favCell.swipeLeft()
        
        let removeFromFav = favCell.buttons["Remove"]
        XCTAssertTrue(removeFromFav.waitForExistence(timeout: 1))
        removeFromFav.tap()
    }

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    @MainActor
    func testExample() throws {
        // UI tests must launch the application that they test.
        let app = XCUIApplication()
        app.launch()

        // Use XCTAssert and related functions to verify your tests produce the correct results.
    }

    @MainActor
    func testLaunchPerformance() throws {
        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, watchOS 7.0, *) {
            // This measures how long it takes to launch your application.
            measure(metrics: [XCTApplicationLaunchMetric()]) {
                XCUIApplication().launch()
            }
        }
    }
}
